[Dynamic Security Analysis] Add endpoints for managing parameters and running computation  (#665)
Signed-off-by: Thang PHAM <phamthang37@gmail.com>